# python_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_sql.sql
notebooks/: test.ipynb
src/utils/: data_manipulation.py
